// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reviews component test Reviews component' should render correctly with authorized user 1`] = `
<div>
  <section
    class="property__reviews reviews"
  >
    <h2
      class="reviews__title"
    >
      Reviews · 
      <span
        class="reviews__amount"
      >
        2
      </span>
    </h2>
    <ul
      class="reviews__list"
    >
      <li
        class="reviews__item"
      >
        <div
          class="reviews__user user"
        >
          <div
            class="reviews__avatar-wrapper user__avatar-wrapper"
          >
            <img
              alt="Reviews avatar"
              class="reviews__avatar user__avatar"
              height="54"
              src="img/1.png"
              width="54"
            />
          </div>
          <span
            class="reviews__user-name"
          >
            Max
          </span>
        </div>
        <div
          class="reviews__info"
        >
          <div
            class="reviews__rating rating"
          >
            <div
              class="reviews__stars rating__stars"
            >
              <span
                style="width: 80%;"
              />
              <span
                class="visually-hidden"
              >
                Rating
              </span>
            </div>
          </div>
          <p
            class="reviews__text"
          >
            A quiet cozy and picturesque that hides behind a a river by the unique lightness of Amsterdam.
          </p>
          <time
            class="reviews__time"
            datetime="2019-05-08T14:13:56.569Z"
          >
            May 2019
          </time>
        </div>
      </li>
      <li
        class="reviews__item"
      >
        <div
          class="reviews__user user"
        >
          <div
            class="reviews__avatar-wrapper user__avatar-wrapper"
          >
            <img
              alt="Reviews avatar"
              class="reviews__avatar user__avatar"
              height="54"
              src="img/2.png"
              width="54"
            />
          </div>
          <span
            class="reviews__user-name"
          >
            Vadim
          </span>
        </div>
        <div
          class="reviews__info"
        >
          <div
            class="reviews__rating rating"
          >
            <div
              class="reviews__stars rating__stars"
            >
              <span
                style="width: 60%;"
              />
              <span
                class="visually-hidden"
              >
                Rating
              </span>
            </div>
          </div>
          <p
            class="reviews__text"
          >
            A quiet of Amsterdam.
          </p>
          <time
            class="reviews__time"
            datetime="2019-06-08T14:13:56.569Z"
          >
            June 2019
          </time>
        </div>
      </li>
    </ul>
    <form
      action="#"
      class="reviews__form form"
      data-testid="form"
      method="post"
    >
      <label
        class="reviews__label form__label"
        for="review"
      >
        Your review
      </label>
      <div
        class="reviews__rating-form form__rating"
      >
        <input
          class="form__rating-input visually-hidden"
          id="5-stars"
          name="rating"
          type="radio"
          value="5"
        />
        <label
          class="reviews__rating-label form__rating-label"
          for="5-stars"
          title="perfect"
        >
          <svg
            class="form__star-image"
            height="33"
            width="37"
          >
            <use
              xlink:href="#icon-star"
            />
          </svg>
        </label>
        <input
          class="form__rating-input visually-hidden"
          id="4-stars"
          name="rating"
          type="radio"
          value="4"
        />
        <label
          class="reviews__rating-label form__rating-label"
          for="4-stars"
          title="perfect"
        >
          <svg
            class="form__star-image"
            height="33"
            width="37"
          >
            <use
              xlink:href="#icon-star"
            />
          </svg>
        </label>
        <input
          class="form__rating-input visually-hidden"
          id="3-stars"
          name="rating"
          type="radio"
          value="3"
        />
        <label
          class="reviews__rating-label form__rating-label"
          for="3-stars"
          title="perfect"
        >
          <svg
            class="form__star-image"
            height="33"
            width="37"
          >
            <use
              xlink:href="#icon-star"
            />
          </svg>
        </label>
        <input
          class="form__rating-input visually-hidden"
          id="2-stars"
          name="rating"
          type="radio"
          value="2"
        />
        <label
          class="reviews__rating-label form__rating-label"
          for="2-stars"
          title="perfect"
        >
          <svg
            class="form__star-image"
            height="33"
            width="37"
          >
            <use
              xlink:href="#icon-star"
            />
          </svg>
        </label>
        <input
          class="form__rating-input visually-hidden"
          id="1-stars"
          name="rating"
          type="radio"
          value="1"
        />
        <label
          class="reviews__rating-label form__rating-label"
          for="1-stars"
          title="perfect"
        >
          <svg
            class="form__star-image"
            height="33"
            width="37"
          >
            <use
              xlink:href="#icon-star"
            />
          </svg>
        </label>
      </div>
      <textarea
        class="reviews__textarea form__textarea"
        data-testid="review"
        id="review"
        maxlength="300"
        name="review"
        placeholder="Tell how was your stay, what you like and what can be improved"
      />
      <div
        class="reviews__button-wrapper"
      >
        <p
          class="reviews__help"
        >
          To submit review please make sure to set 
          <span
            class="reviews__star"
          >
            rating
          </span>
           and describe your stay with at least 
          <b
            class="reviews__text-amount"
          >
            50 characters
          </b>
          .
        </p>
        <button
          class="reviews__submit form__submit button"
          disabled=""
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </section>
</div>
`;

exports[`Reviews component test Reviews component' should render correctly with un-authorized user 1`] = `
<div>
  <section
    class="property__reviews reviews"
  >
    <h2
      class="reviews__title"
    >
      Reviews · 
      <span
        class="reviews__amount"
      >
        2
      </span>
    </h2>
    <ul
      class="reviews__list"
    >
      <li
        class="reviews__item"
      >
        <div
          class="reviews__user user"
        >
          <div
            class="reviews__avatar-wrapper user__avatar-wrapper"
          >
            <img
              alt="Reviews avatar"
              class="reviews__avatar user__avatar"
              height="54"
              src="img/1.png"
              width="54"
            />
          </div>
          <span
            class="reviews__user-name"
          >
            Max
          </span>
        </div>
        <div
          class="reviews__info"
        >
          <div
            class="reviews__rating rating"
          >
            <div
              class="reviews__stars rating__stars"
            >
              <span
                style="width: 80%;"
              />
              <span
                class="visually-hidden"
              >
                Rating
              </span>
            </div>
          </div>
          <p
            class="reviews__text"
          >
            A quiet cozy and picturesque that hides behind a a river by the unique lightness of Amsterdam.
          </p>
          <time
            class="reviews__time"
            datetime="2019-05-08T14:13:56.569Z"
          >
            May 2019
          </time>
        </div>
      </li>
      <li
        class="reviews__item"
      >
        <div
          class="reviews__user user"
        >
          <div
            class="reviews__avatar-wrapper user__avatar-wrapper"
          >
            <img
              alt="Reviews avatar"
              class="reviews__avatar user__avatar"
              height="54"
              src="img/2.png"
              width="54"
            />
          </div>
          <span
            class="reviews__user-name"
          >
            Vadim
          </span>
        </div>
        <div
          class="reviews__info"
        >
          <div
            class="reviews__rating rating"
          >
            <div
              class="reviews__stars rating__stars"
            >
              <span
                style="width: 60%;"
              />
              <span
                class="visually-hidden"
              >
                Rating
              </span>
            </div>
          </div>
          <p
            class="reviews__text"
          >
            A quiet of Amsterdam.
          </p>
          <time
            class="reviews__time"
            datetime="2019-06-08T14:13:56.569Z"
          >
            June 2019
          </time>
        </div>
      </li>
    </ul>
    
  </section>
</div>
`;
